# sigint

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: architecture.md
src/sigint/: __init__.py  config.py
src/sigint/agents/: __init__.py  base.py  jobs_signal.py  macro.py  orchestrator.py  sec_filings.py  trade_flow.py
src/sigint/api/: __init__.py  main.py  routes.py  schemas.py
src/sigint/data_ingestion/: __init__.py  comtrade.py  edgar.py  fred.py  jobs.py
src/sigint/db/: __init__.py  connection.py  models.py
src/sigint/db/migrations/: env.py
src/sigint/db/migrations/versions/: 2a543b18955c_initial_schema_entity_canonical_and_.py
src/sigint/entity_resolution/: __init__.py  exact.py  fuzzy.py  graph.py  models.py  resolver.py  rules.py  semantic.py
src/sigint/sql_generation/: __init__.py  few_shot.py  generator.py  schemas.py  validator.py
tests/: __init__.py  conftest.py
tests/eval/: eval_harness.py
tests/integration/: test_end_to_end.py
tests/unit/: test_agents.py  test_config.py  test_entity_resolution.py  test_sql_generation.py
